# deception-universality

./: .gitignore  CONTRIBUTING.md  IMPORT_FIXES_SUMMARY.md  LICENSE  README.md  RUN_EXPERIMENTS.md  USAGE.md  plans.md  pyproject.toml  requirements.txt  results.csv  run_experiments.sh
docs/: agent_design.md  architecture.md  requirements.md
notes/: black_to_white.md
results/: plot_results.py  results_05.csv  results_3.csv  results_7.csv  summary.py
src/: main.py  main_nnsight.py  results_nnsight.csv
src/data/: auroc_table.tex  load_data.py  monitor_scores.csv
src/data/deception_detection/: summary.md
src/data/deception_detection/deception_detection/: models.py  repository.py  types.py  utils.py
src/data/deception_detection/deception_detection/data/: __init__.py  ai_audit.py  ai_liar.py  base.py  control.py  insider_trading.py  repe.py  roleplaying.py  sandbagging_v2.py  train.py  werewolf.py
src/probity/collection/: activation_store.py  collectors.py
src/probity/datasets/: base.py  position_finder.py  templated.py  tokenized.py
src/probity/pipeline/: pipeline.py
src/probity/probes/: __init__.py  base.py  config.py  directional.py  inference.py  linear.py  logistic.py  mlp.py  probe_set.py  sklearn_logistic.py
src/probity/training/: trainer.py
tests/: test_activation_extractor.py
