[project]
name = "spar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=4.1.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformer-lens>=2.15.4",
    "transformers>=4.30.0",
]
