[project]
name = "spar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=4.1.1",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformer-lens>=2.15.4",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "openai>=1.109.1",
    "retry>=0.9.2",
    "tenacity>=9.1.2",
    "python-dotenv>=1.1.1",
    "fire>=0.7.1",
    "peft>=0.17.1",
    "matplotlib>=3.10.6",
    "nnsight>=0.5.7",
    "hf-transfer>=0.1.9",
    "bitsandbytes>=0.48.1",
]
